public/css/custom.css
body {
    padding-top: 65px;
}

html, body, main, #app {
    min-height: 100%;
    height: 100%;
}

.card-text {
    min-height: 50px;
    height: 50px;
    overflow: auto;
}

.server-banner-img {
    max-height: 250px;
    object-fit: contain;
}

.gray-bg {
    background-color: #34373c;
}

.sidebar {
    min-height: 100%;
    float: left;
    height: 100%;
    min-width: 20%;
    width: 20%;
}

#chat-area {
    min-height: 100%;
    height: 100%;
    min-width: 100%;
    width: 80%;
    left: 20%;
}

#chat-messages {
    height: 85%;
    width: 100%;
}

#chat-list {
    height: 100%;
    overflow: auto;
}

#chat-input-bar {
    border-top: 2px solid #DFDFDF;
    height: 15%;
    width: 100%;
}

#chat-form {
    width: 100%;
    height: 100%;
}

#chat-input-bar input {
    height: 60%;
    width: 78%;
}

